# alpha-zero-chess

./: .gitignore  .gitmodules  BUG_FIX_AND_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  DESIGN_VS_IMPLEMENTATION_ANALYSIS.md  Mathematic_Principle.md  PHASE4_COMPLETE.md  PHASE4_COMPLETION_REPORT.md  PROJECT_STRUCTURE.md  README.md  Road_to_2500.md  TRAINING_OPTIMIZATION_FINAL_RESULTS.md  TRAINING_OPTIMIZATION_PROPOSALS.md  TRAINING_OPTIMIZATION_RESULTS.md  acceleration_plan.md  batched_mcts.md  main.py  monitor_training.sh  pyproject.toml  setup_linux.sh  test_cpp_aligned_encoder.py  test_setup_remote.sh
.claude/: settings.local.json
Google Colab/: README.md  project_plan.md  (+1 more)
alphazero-cpp/: .gitignore  CMakeLists.txt  MISSING_OPTIMIZATIONS.md  OPTIMIZATION_PLAN.md  PHASE3_COMPLETE.md  PHASE3_FINAL_SUMMARY.md  PHASE3_PROGRESS.md  alphazero_cpp.cp313-win_amd64.pyd  benchmark_batch_coordinator_baseline.json  benchmark_batch_coordinator_realistic_baseline.json  benchmark_parallel_traversal_baseline.json  benchmark_parallel_traversal_optimized.json  train.py
alphazero-cpp/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alphazero_cpp.slnx  alphazero_cpp.vcxproj  alphazero_cpp.vcxproj.filters  chess_engine.vcxproj  chess_engine.vcxproj.filters  cmake_install.cmake  encoding.vcxproj  encoding.vcxproj.filters  mcts_core.vcxproj  mcts_core.vcxproj.filters  selfplay.vcxproj  selfplay.vcxproj.filters  training.vcxproj  training.vcxproj.filters
alphazero-cpp/build2/Release/: alphazero_cpp.cp313-win_amd64.pyd  alphazero_cpp.exp  alphazero_cpp.lib  chess_engine.lib  encoding.lib  mcts_core.lib  selfplay.lib  training.lib
alphazero-cpp/build2/alphazero_cpp.dir/Release/: alphazero_cpp.cp313-win_amd64.pyd.recipe
alphazero-cpp/build2/alphazero_cpp.dir/Release/alphazero_cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
alphazero-cpp/build2/chess_engine.dir/Release/chess_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
alphazero-cpp/build2/encoding.dir/Release/encoding.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
alphazero-cpp/build2/mcts_core.dir/Release/mcts_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
alphazero-cpp/build2/selfplay.dir/Release/selfplay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
alphazero-cpp/build2/training.dir/Release/: training.lib.recipe
alphazero-cpp/build2/training.dir/Release/training.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
alphazero-cpp/build2/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
alphazero-cpp/build2/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
alphazero-cpp/build2/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
alphazero-cpp/docs/: PARALLEL_SELFPLAY_PLAN.md
alphazero-cpp/include/chess/: bitboard.hpp  move.hpp  movegen.hpp  position.hpp  zobrist.hpp
alphazero-cpp/include/encoding/: move_encoder.hpp  position_encoder.hpp
alphazero-cpp/include/mcts/: batch_coordinator.hpp  batch_search.hpp  node.hpp  node_pool.hpp  search.hpp
alphazero-cpp/include/selfplay/: chess_extensions.hpp  coordinator.hpp  evaluation_queue.hpp  game.hpp  parallel_coordinator.hpp  reanalyzer.hpp
alphazero-cpp/include/training/: replay_buffer.hpp  sum_tree.hpp  trainer.hpp
alphazero-cpp/scripts/: alphazero_cpp.cp313-win_amd64.pyd  claude_interface.py  evaluation.py  generate_summary.py  install_stockfish.py  live_dashboard.py  llm_operation_manual.md  llm_tuner_prompt.md  monitor_iteration.py  network.py  test_performance.py  test_reanalysis_impact.py  train.py  value_head_collapse_paper.html  value_head_collapse_paper.md
alphazero-cpp/src/bindings/: python_bindings.cpp  python_bindings.cpp.backup
alphazero-cpp/src/chess/: bitboard.cpp  move.cpp  movegen.cpp  position.cpp  zobrist.cpp
alphazero-cpp/src/encoding/: move_encoder.cpp  position_encoder.cpp
alphazero-cpp/src/mcts/: batch_coordinator.cpp  batch_search.cpp  search.cpp
alphazero-cpp/src/selfplay/: coordinator.cpp  evaluation_queue.cpp  game.cpp  parallel_coordinator.cpp  reanalyzer.cpp
alphazero-cpp/src/training/: replay_buffer.cpp  sum_tree.cpp  trainer.cpp
alphazero-cpp/tests/: alphazero_sync.cp313-win_amd64.pyd  benchmark_ReplayBuffer.py  benchmark_batch_coordinator.py  benchmark_batch_coordinator_realistic.py  benchmark_openmp_parallel.py  benchmark_parallel_traversal.py  benchmark_train_path.py  benchmark_with_nn.py  check_avx2.cpp  history_encoding_test.cpp  mcts_benchmark.cpp  mcts_correctness_test.cpp  mcts_test.cpp  node_pool_test.cpp  perft_test.cpp  perft_test_library.cpp  realistic_test_122.py  replay_buffer_v5_test.cpp  test_122_channels.py  test_avx2.py  test_claude_sync_review.py  test_cross_validation.py  test_encoding_quality.py  test_erm_accuracy.py  test_eval_queue_staleness.py  test_move_decoder.py  test_nhwc_layout.py  test_node_pool_integration.py  test_per.py  test_per_extended.py  test_perspective_flip.py  test_position_history.py  test_python_bindings.py  test_reanalysis.py  test_risk_erm.py  test_spin_poll_stability.py  test_stockfish_integration.py  test_training_components.py  test_virtual_losses_integration.py  test_zero_copy.py  (+2 more)
alphazero/mcts/cpp/: CMakeLists.txt  __init__.py  backend.py  mcts_cpp.cp313-win_amd64.pyd  setup.py
alphazero/mcts/cpp/src/: bindings.cpp  node.hpp  search.hpp
(+113 files in other folders)
